--- a/html/accountMain.html
+++ b/html/accountMain.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>개인프로젝트 금융서비스</title>
+    <title>KOKOA BANK</title>
     <!-- 부트스트랩 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
@@ -42,8 +42,44 @@
     		</div>
   		</div>
 	</nav>
-	<br>
-	
+	<div id="myCarousel" class="carousel slide">
+	  	<div class="carousel-indicators">
+	    	<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+	    	<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+	    	<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+	  	</div>
+	  	<div class="carousel-inner">
+	    	<div class="carousel-item active">
+	      		<img src="img/test.png" class="d-block w-50" alt="...">
+	      		<div class="carousel-caption d-none d-md-block">
+	        		<h5>이준혁의 통장</h5>
+	        		<p>Some representative placeholder content for the first slide.</p>
+	      		</div>
+	    	</div>
+	    	<div class="carousel-item">
+	      		<img src="img/test.png" class="d-block w-50" alt="...">
+	      		<div class="carousel-caption d-none d-md-block">
+	        		<h5>Second slide label</h5>
+	        		<p>Some representative placeholder content for the second slide.</p>
+	      		</div>
+    		</div>
+	    	<div class="carousel-item">
+	      		<img src="img/test.png" class="d-block w-50" alt="...">
+	      		<div class="carousel-caption d-none d-md-block">
+        			<h5>Third slide label</h5>
+	        		<p>Some representative placeholder content for the third slide.</p>
+	      		</div>
+	    	</div>
+	  	</div>
+	  	<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+	    	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    	<span class="visually-hidden">Previous</span>
+	  	</button>
+	  	<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+	    	<span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    	<span class="visually-hidden">Next</span>
+	  	</button>
+	</div>	
 
     <!-- 부트스트랩 JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
@@ -52,7 +88,7 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script type="text/javascript">
 
-		
+    	const carousel = new bootstrap.Carousel('#myCarousel')
 
     </script>
 </body>
