--- a/html/index.html
+++ b/html/index.html
@@ -48,59 +48,59 @@
     		</div>
   		</div>
 	</nav>
-	<br>
 	<div class="container-fluid">
 		<div class="h4 d-flex justify-content-center">인플루언서</div>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		<div class="row">
-			<div class="h4 d-flex justify-content-center">실시간 유튜브 페이지 API로 가져올 예정</div>	
-			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			<div class="d-flex justify-content-center" style="padding: 33px;">
+				<iframe width="100%" height="600" src="https://www.youtube-nocookie.com/embed/tSK3qmsWyy4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>	
 		</div>
-		<div class="row d-flex justify-content-around">
-			<div class="card" style="width: 13rem;">
+		<div class="row d-flex justify-content-around" style="padding: 33px;">
+			<div class="card" style="width: 13rem; height: 300px;">
   				<img src="img/man.png" class="card-img-top" alt="...">
-  				<div class="card-body">
-    				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
+  				<div class="card-body d-flex justify-content-around align-items-end">
+					<div><a href="#" style="text-decoration: none;">유튜브</a></div>
+					<div><a href="#" style="text-decoration: none;">인스타</a></div>
   				</div>
 			</div>
-			<div class="card" style="width: 13rem;">
-	  			<img src="img/man.png" class="card-img-top" alt="...">
-	  			<div class="card-body">
-	    			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-	  			</div>
+			<div class="card" style="width: 13rem; height: 300px;">
+  				<img src="img/man.png" class="card-img-top" alt="...">
+  				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
+  				<div class="card-body d-flex justify-content-around align-items-end">
+					<div><a href="#" style="text-decoration: none;">유튜브</a></div>
+					<div><a href="#" style="text-decoration: none;">인스타</a></div>
+  				</div>
 			</div>
-			<div class="card" style="width: 13rem;">
-	  			<img src="img/man.png" class="card-img-top" alt="...">
-	  			<div class="card-body">
-	    			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-	  			</div>
+			<div class="card" style="width: 13rem; height: 300px;">
+  				<img src="img/man.png" class="card-img-top" alt="...">
+  				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
+  				<div class="card-body d-flex justify-content-around align-items-end">
+					<div><a href="#" style="text-decoration: none;">유튜브</a></div>
+					<div><a href="#" style="text-decoration: none;">인스타</a></div>
+  				</div>
 			</div>
-			<div class="card" style="width: 13rem;">
-	  			<img src="img/man.png" class="card-img-top" alt="...">
-	  			<div class="card-body">
-	    			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-	  			</div>
+			<div class="card" style="width: 13rem; height: 300px;">
+  				<img src="img/man.png" class="card-img-top" alt="...">
+  				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
+  				<div class="card-body d-flex justify-content-around align-items-end">
+					<div><a href="#" style="text-decoration: none;">유튜브</a></div>
+					<div><a href="#" style="text-decoration: none;">인스타</a></div>
+  				</div>
 			</div>
-			<div class="card" style="width: 13rem;">
-	  			<img src="img/man.png" class="card-img-top" alt="...">
-	  			<div class="card-body">
-	    			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-	  			</div>
-			</div>
-			<div class="card" style="width: 13rem;">
-	  			<img src="img/man.png" class="card-img-top" alt="...">
-	  			<div class="card-body">
-	    			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-	  			</div>
+			<div class="card" style="width: 13rem; height: 300px;">
+  				<img src="img/man.png" class="card-img-top" alt="...">
+  				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
+  				<div class="card-body d-flex justify-content-around align-items-end">
+					<div><a href="#" style="text-decoration: none;">유튜브</a></div>
+					<div><a href="#" style="text-decoration: none;">인스타</a></div>
+  				</div>
 			</div>
 		</div>	
 	</div>
-	<br>
 	<div class="container-fluid">
 		<div class="h4 d-flex justify-content-center">NEWS</div>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		<div class="h4 d-flex justify-content-center">실시간 뉴스 금융 페이지 API로 가져올 예정</div>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</div>
 	<form>
 		<div class="modal fade" id="signIn" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -167,10 +167,12 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 	<script type="text/javascript">	
 		
-    	$(function() {
+/*     	
+ 		$(function() {
     	  	$('#signIn').modal('show');
     	});
-
+ */
+ 
     </script>
 </body>
 </html>
