--- a/html/accountMain.html
+++ b/html/accountMain.html
@@ -7,6 +7,8 @@
     <title>KOKOA BANK</title>
     <!-- 부트스트랩 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+	<script src="https://kit.fontawesome.com/b05f67c88a.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -42,40 +44,206 @@
     		</div>
   		</div>
 	</nav>
-	<div id="myCarousel" class="carousel slide">
-	  	<div class="carousel-indicators">
-	    	<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-	    	<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-	    	<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-	  	</div>
-	  	<div class="carousel-inner">
+	<div id="myCarousel" class="carousel slide carousel-dark" data-bs-touch="false" style="padding: 50px; box-sizing: border-box;">
+  		<div class="carousel-inner">
 	    	<div class="carousel-item active">
-	      		<img src="img/test.png" class="d-block w-50" alt="...">
-	      		<div class="carousel-caption d-none d-md-block">
-	        		<h5>이준혁의 통장</h5>
-	        		<p>Some representative placeholder content for the first slide.</p>
-	      		</div>
+	    		<div class="d-flex justify-content-center">
+		    		<div class="rounded border border-dark col-md-3 text-center" style="padding: 30px; background: #FBEFFB;">
+		    			<p class="fs-4">예금주: 이준혁</p>
+		    			<p class="fs-4">계좌명: 이준혁 통장 			
+		    			<p class="fs-4">계좌번호: 3414-34-3141</p>
+		    			<p class="fs-4">개설일: 2023-06-01</p>
+		    		</div>
+	    		</div>
+	    		<br>
+	    		<div class="d-flex justify-content-center">
+	    			<a class="btn btn-outline-success" role="button" aria-disabled="true" href="accountAdd.html">계좌개설</a>
+	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" href="accountCorrect.html">계좌수정</a>
+	    		</div>
+	    		<br>
+	    		<div class="d-flex justify-content-start">
+	    			<button type="button" class="btn btn-danger col-md-auto" id="btnSearch">
+						<i class="fa-solid fa-magnifying-glass"></i>
+					</button>
+	    			<div class="col-md-2">
+    					<select id="" class="form-select">
+      						<option selected disabled>기간</option>
+      						<option>1개월</option>
+      						<option>3개월</option>
+      						<option>6개월</option>
+    					</select>
+  					</div>
+	    			<div class="col-md-2">
+    					<input type="text" class="form-control datepicker" placeholder="시작일">
+  					</div>
+	    			<div class="col-md-2">
+    					<input type="text" class="form-control datepicker" placeholder="종료일">
+  					</div> 
+	    		</div>
+	    		<table class="table">
+				  	<thead>
+				    	<tr>
+				      		<th scope="col">#</th>
+				      		<th scope="col">First</th>
+				      		<th scope="col">Last</th>
+				      		<th scope="col">Handle</th>
+				    	</tr>
+				  	</thead>
+			  		<tbody>
+				    	<tr>
+				      		<th scope="row">1</th>
+				      		<td>Mark</td>
+				      		<td>Otto</td>
+				      		<td>@mdo</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2</th>
+				      		<td>Jacob</td>
+				      		<td>Thornton</td>
+				      		<td>@fat</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">3</th>
+				      		<td colspan="2">Larry the Bird</td>
+				      		<td>@twitter</td>
+				    	</tr>
+				  	</tbody>
+				</table>
+	    	</div>
+    		<div class="carousel-item">
+    			<div class="d-flex justify-content-center">
+		    		<div class="rounded border border-dark col-md-3 text-center" style="padding: 30px; background: #FBEFFB;">
+		    			<p class="fs-4">예금주: 이준혁</p>
+		    			<p class="fs-4">계좌명: 이준혁 통장 			
+		    			<p class="fs-4">계좌번호: 3414-34-3141</p>
+		    			<p class="fs-4">개설일: 2023-06-01</p>
+		    		</div>
+	    		</div>
+	    		<br>
+	    		<div class="d-flex justify-content-center">
+	    			<a class="btn btn-outline-success" role="button" aria-disabled="true" href="accountAdd.html">계좌개설</a>
+	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" href="accountCorrect.html">계좌수정</a>
+	    		</div>
+	    		<br>
+	    		<div class="d-flex justify-content-start">
+	    			<button type="button" class="btn btn-danger col-md-auto" id="btnSearch">
+						<i class="fa-solid fa-magnifying-glass"></i>
+					</button>
+	    			<div class="col-md-2">
+    					<select id="" class="form-select">
+      						<option selected disabled>기간</option>
+      						<option>1개월</option>
+      						<option>3개월</option>
+      						<option>6개월</option>
+    					</select>
+  					</div>
+	    			<div class="col-md-2">
+    					<input type="text" class="form-control datepicker" placeholder="시작일">
+  					</div>
+	    			<div class="col-md-2">
+    					<input type="text" class="form-control datepicker" placeholder="종료일">
+  					</div> 
+	    		</div>
+	    		<table class="table">
+				  	<thead>
+				    	<tr>
+				      		<th scope="col">#</th>
+				      		<th scope="col">First</th>
+				      		<th scope="col">Last</th>
+				      		<th scope="col">Handle</th>
+				    	</tr>
+				  	</thead>
+			  		<tbody>
+				    	<tr>
+				      		<th scope="row">1</th>
+				      		<td>Mark</td>
+				      		<td>Otto</td>
+				      		<td>@mdo</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2</th>
+				      		<td>Jacob</td>
+				      		<td>Thornton</td>
+				      		<td>@fat</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">3</th>
+				      		<td colspan="2">Larry the Bird</td>
+				      		<td>@twitter</td>
+				    	</tr>
+				  	</tbody>
+				</table>
 	    	</div>
 	    	<div class="carousel-item">
-	      		<img src="img/test.png" class="d-block w-50" alt="...">
-	      		<div class="carousel-caption d-none d-md-block">
-	        		<h5>Second slide label</h5>
-	        		<p>Some representative placeholder content for the second slide.</p>
-	      		</div>
-    		</div>
-	    	<div class="carousel-item">
-	      		<img src="img/test.png" class="d-block w-50" alt="...">
-	      		<div class="carousel-caption d-none d-md-block">
-        			<h5>Third slide label</h5>
-	        		<p>Some representative placeholder content for the third slide.</p>
-	      		</div>
+	    		<div class="d-flex justify-content-center">
+		    		<div class="rounded border border-dark col-md-3 text-center" style="padding: 30px; background: #FBEFFB;">
+		    			<p class="fs-4">예금주: 이준혁</p>
+		    			<p class="fs-4">계좌명: 이준혁 통장 			
+		    			<p class="fs-4">계좌번호: 3414-34-3141</p>
+		    			<p class="fs-4">개설일: 2023-06-01</p>
+		    		</div>
+	    		</div>
+	    		<br>
+	    		<div class="d-flex justify-content-center">
+	    			<a class="btn btn-outline-success" role="button" aria-disabled="true" href="accountAdd.html">계좌개설</a>
+	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" href="accountCorrect.html">계좌수정</a>
+	    		</div>
+	    		<br>
+	    		<div class="d-flex justify-content-start">
+	    			<button type="button" class="btn btn-danger col-md-auto" id="btnSearch">
+						<i class="fa-solid fa-magnifying-glass"></i>
+					</button>
+	    			<div class="col-md-2">
+    					<select id="" class="form-select">
+      						<option selected disabled>기간</option>
+      						<option>1개월</option>
+      						<option>3개월</option>
+      						<option>6개월</option>
+    					</select>
+  					</div>
+	    			<div class="col-md-2">
+    					<input type="text" class="form-control datepicker" placeholder="시작일">
+  					</div>
+	    			<div class="col-md-2">
+    					<input type="text" class="form-control datepicker" placeholder="종료일">
+  					</div> 
+	    		</div>
+	    		<table class="table">
+				  	<thead>
+				    	<tr>
+				      		<th scope="col">#</th>
+				      		<th scope="col">First</th>
+				      		<th scope="col">Last</th>
+				      		<th scope="col">Handle</th>
+				    	</tr>
+				  	</thead>
+			  		<tbody>
+				    	<tr>
+				      		<th scope="row">1</th>
+				      		<td>Mark</td>
+				      		<td>Otto</td>
+				      		<td>@mdo</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2</th>
+				      		<td>Jacob</td>
+				      		<td>Thornton</td>
+				      		<td>@fat</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">3</th>
+				      		<td colspan="2">Larry the Bird</td>
+				      		<td>@twitter</td>
+				    	</tr>
+				  	</tbody>
+				</table>
 	    	</div>
 	  	</div>
-	  	<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+	  	<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev" style="width: 32px; height: 32px; top: 50%; transform: translateY(-64px);">
 	    	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 	    	<span class="visually-hidden">Previous</span>
 	  	</button>
-	  	<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+	  	<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next" style="width: 32px; height: 32px; top: 50%; transform: translateY(-64px);">
 	    	<span class="carousel-control-next-icon" aria-hidden="true"></span>
 	    	<span class="visually-hidden">Next</span>
 	  	</button>
@@ -86,9 +254,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script type="text/javascript">
 
-    	const carousel = new bootstrap.Carousel('#myCarousel')
+	 	// datepicker
+		$(function() {
+	
+			$(".datepicker").datepicker({
+				dateFormat: 'yy-mm-dd'
+			});
+	
+		});
 
     </script>
 </body>
