--- a/html/index.html
+++ b/html/index.html
@@ -9,45 +9,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg bg-body-tertiary">
-		<div class="container-fluid">
-  			<a class="navbar-brand h1" href="index.html">KOKOA BANK</a>
-  			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-   				<span class="navbar-toggler-icon"></span>
-  			</button>
-			<div class="collapse navbar-collapse" id="navbarScroll">
-     			<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-      				<li class="nav-item">
-        				<a class="nav-link" href="accountMain.html">조회</a>
-      				</li>
-      				<li class="nav-item dropdown">
-        				<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
-        				<ul class="dropdown-menu">
+	<header class="p-3 text-bg-dark">
+		<div class="container">
+      		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+         	 		<li><a href="index.html" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
+          			<li><a href="accountMain.html" class="nav-link px-2 text-white">조회</a></li>
+          			<li class="dropdown">
+          				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
+          				<ul class="dropdown-menu">
           					<li><a class="dropdown-item" href="depositMain.html">입금</a></li>
           					<li><a class="dropdown-item" href="depositTransfer.html">이체</a></li>
           					<li><a class="dropdown-item" href="depositAutoTransfer.html">자동이체</a></li>
         				</ul>
-      				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="exchangeRate.html">환율</a>
-      				</li>
-      				<li class="nav-item dropdown">
-        				<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
-        				<ul class="dropdown-menu">
+          			</li>
+          			<li><a href="exchangeRate.html" class="nav-link px-2 text-white">환율</a></li>
+          			<li class="dropdown">
+          				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
+          				<ul class="dropdown-menu">
         					<li><a class="dropdown-item" href="domesticStock.html">국내</a></li>
           					<li><a class="dropdown-item" href="foreignStock.html">해외</a></li>
         				</ul>
-      				</li>
-      			</ul>
-      			<button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#signIn" id="btnSignin">
-					로그인
-				</button>
-				<button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#signUp" id="btnSignup">
-  					회원가입
-				</button>	
-    		</div>
-  		</div>
-	</nav>
+          			</li>
+        		</ul>
+        		<div class="text-end">
+          			<button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#signIn" id="btnSignin">로그인</button>
+					<button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#signUp" id="btnSignup">회원가입</button>	
+        		</div>
+      		</div>
+    	</div>
+	</header>
 	<div class="container-fluid">
 		<div class="h4 d-flex justify-content-center">인플루언서</div>
 		<div class="row">
